; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/uwb/extr_lc-dev.c_uwb_dev_IEs_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/uwb/extr_lc-dev.c_uwb_dev_IEs_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.uwb_dev = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @uwb_dev_IEs_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uwb_dev_IEs_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.uwb_dev*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.uwb_dev* @to_uwb_dev(%struct.device* %8)
  store %struct.uwb_dev* %9, %struct.uwb_dev** %7, align 8
  %10 = load %struct.uwb_dev*, %struct.uwb_dev** %7, align 8
  %11 = load %struct.uwb_dev*, %struct.uwb_dev** %7, align 8
  %12 = getelementptr inbounds %struct.uwb_dev, %struct.uwb_dev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* @PAGE_SIZE, align 4
  %16 = call i32 @uwb_bce_print_IEs(%struct.uwb_dev* %10, i32 %13, i8* %14, i32 %15)
  ret i32 %16
}

declare dso_local %struct.uwb_dev* @to_uwb_dev(%struct.device*) #1

declare dso_local i32 @uwb_bce_print_IEs(%struct.uwb_dev*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
